# bdl

./: Cargo.toml  README.md  build.sh  grammar.md  index.html  server.py
.github/workflows/: web-deploy.yml
backend/: Cargo.toml  file.c
backend/src/: ast_processor.rs  codegen.rs  main.rs  test.bdl
benchmarks/: test.bdl
frontend/: Cargo.toml
frontend/src/: ast.rs  main.rs  parser.pest  parser.rs  parser_test.rs  test.bdl
src/: lib.rs
web/: index.html  main.js
web/wasm/: bdl_web.d.ts  bdl_web.js  bdl_web_bg.wasm  bdl_web_bg.wasm.d.ts  package.json
