[package]
name = "bdl-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
bdl-frontend = { path = "../frontend" }
bdl-backend = { path = "../backend" }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3
lto = true
